tests/NormalTests/paczka1/fuzzy1/95524171.err
Error in line 1: 8tpAwxN S670 76,1
Error in line 6: 8tpAwxN A581 31,5
Error in line 14: Ht0g4M A490 144,4
Error in line 26: A581 A143 40,0
Error in line 39: jFTqjbQCUBV S670 354,j
